18_reverse_str/grade.txt
Grading at Sun Apr 18 19:57:59 UTC 2021
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:7:12: error: ‘return’ with a value, in function returning void [-Werror]
     return 0;
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
